--- a/src/app/servers/servers.component.html
+++ b/src/app/servers/servers.component.html
@@ -29,3 +29,17 @@
 >
   Reset
 </button> -->
+
+<!-- Basics Assignment #3 
+  <button class="btn btn-primary" (click)="onDisplayDetails($event)">
+    Display Details
+  </button>
+  <p *ngIf="displayDetails">Secret Password = tuna</p>
+  <p
+  *ngFor="let clicks of clicksArray; index as i"
+  [ngStyle]="{ backgroundColor: i > 4 ? 'blue' : 'transparent' }"
+  [ngClass]="{ 'white-text': i > 4 }"
+  >
+  Click no. {{ i + 1 }} happen at {{ clicks }}
+</p>
+-->
